fix renovate